# fancy-status

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  Makefile  README.asciidoc
color/: Cargo.toml
color/src/: color.rs  lib.rs
fastup/: Cargo.toml
fastup/src/: grammar.rustpeg  lib.rs  parser.rs
src/: app.rs  lib.rs  main.cpp  main.rs
src/config/: config.cpp  config.hpp  help.cpp  help.hpp
src/fastup/: build.cpp  build.hpp  error.cpp  error.hpp  fastup.md  mark.cpp  mark.hpp  mark.inl  parse.cpp  parse.hpp  parser.rs  print.cpp  print.hpp  token.cpp  token.hpp  token.md  tree.cpp  tree.hpp
src/output/: mod.rs
src/output/writers/: mod.rs  stdout_writer.rs  writer.rs
src/prelude/: assert.cpp  assert.hpp  block.cpp  block.hpp  prelude.hpp  print.cpp  print.hpp  span.hpp  string.cpp  string.hpp  style.hpp  test.cpp  test.hpp  types.cpp  types.hpp  utility.cpp  utility.hpp
src/renderer/: registry.cpp  registry.hpp  render-dump.cpp  render-tree.cpp  render-tty.cpp
src/renderers/: ansi.rs  dump.rs  html.rs  mod.rs  renderer.rs  tmux.rs
src/style/: tree.rs
src/utils/: byte_size.rs  color.rs  factory.rs  mod.rs  output.rs
src/widget/: expand-error.cpp  expand.cpp  expand.hpp  fastup  registry.cpp  registry.hpp
src/widgets/: cpu.rs  gradient.rs  mem.rs  mod.rs  net.rs  time.rs  widget.rs
stats-once/: Cargo.toml
stats-once/src/: cpu.rs  lib.rs  mem.rs  net.rs  system.rs
supports/packaging/archlinux/: .gitignore  PKGBUILD
