[package]
authors = ["Giumo X. Clanjor (哆啦比猫/兰威举) <cjxgm@126.com>"]
name = "fancy-status"
version = "0.2.1"
description = "Print a fancy statusline for tmux/etc. to show memory usage, cpu percent, date and time, network speed and so on."
categories = ["command-line-utilities"]
homepage = "https://github.com/cjxgm/fancy-status"
repository = "https://github.com/cjxgm/fancy-status"
license = "MIT"

[dependencies]
clap = "2.20"
time = "0.1"
fastup = { path = "fastup" }
color = { path = "color" }
stats-once = { path = "stats-once" }

[workspace]

[[bin]]
name = "fancy-status"
doc = false

