[package]
authors = ["Giumo Clanjor (Weiju Lan) <cjxgm2@gmail.com>"]
name = "fancy-status"
version = "0.3.1"
description = "Print system statistics to truecolor Unicode-aware terminals in opinionated visualizations."
categories = ["command-line-utilities"]
homepage = "https://github.com/cjxgm/fancy-status"
repository = "https://github.com/cjxgm/fancy-status"
license = "MIT"

[dependencies]
clap = "2.20"
time = "0.1"
fastup = { path = "fastup" }
color = { path = "color" }
stats-once = { path = "stats-once" }

[workspace]

[[bin]]
name = "fancy-status"
doc = false

